--- a/quanlythoitrang/quanlythoitrang.csproj
+++ b/quanlythoitrang/quanlythoitrang.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.32.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
